# bidirectional-grpc-chrome-demo

./: .gitignore  Cargo.toml  README.md  com.example.rust_native_demo.json
crates/bgc-client/: Cargo.toml  build.rs
crates/bgc-client/src/: main.rs
crates/bgc-server/: Cargo.toml
crates/bgc-server/src/: bridge.rs  main.rs
extension/: background.js  manifest.json
proto/: bridge.proto
