[workspace]
members = [
"crates/bgc-*"
]
resolver = "2"

[workspace.package]
authors = ["Andre Roelofs andre@eurora-labs.com"]

[workspace.dependencies]
anyhow = "1.0.99"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tonic = "0.14"
tonic-prost-build = "0.14"
tonic-prost = "0.14"
tokio = "1.48.0"
serde =  "1.0"
serde_json = "1.0"
serde_json_lenient = "0.2.4"
thiserror = "2.0.17"
tokio-stream = "0.1"
futures = "0.3.31"

[profile.release]
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
debug = true      # Enable debug symbols, for profiling

[profile.bench]
codegen-units = 256
lto = false
opt-level = 3

[profile.dev]
incremental = true
codegen-units = 256
overflow-checks = false

[profile.dev.package.sqlx-macros]
opt-level = 3
