[package]
name = "bgc-client"
version = "0.0.0"
edition = "2024"
authors.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_json_lenient = { workspace = true }


anyhow = { workspace = true }
tracing = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
